feat: 添加 java16 ldap 支持

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -26,14 +26,15 @@ spring:
     schema:
       - classpath:data.sql
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sonic?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&autoReconnect=true&serverTimezone=GMT%2b8
-    username: root
-    password: ""
+    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE:sonic}?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&autoReconnect=true&serverTimezone=GMT%2b8
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:Sonic!@#123}
   ldap:
-    base: ou=system
-    username: 'uid=admin,ou=system'
-    password: 'password'
-    urls: ldap://127.0.0.1:10389
+    base: ${LDAP_BASE:ou=system}
+    username: ${LDAP_USERNAME:uid=admin,ou=system}
+    password: ${LDAP_PASSWORD:Sonic!@#123}
+    urls: ${LDAP_URL:ldap://127.0.0.1:10389}
+
 # mybatis-plus配置
 mybatis-plus:
   mapper-locations: classpath:mapping/*.xml, classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
@@ -57,28 +58,28 @@ actable:
     type: mysql
 
 gateway:
-  host: "http://localhost:8094"
-  secret: sonic
-  expireDay: 14
+  host: http://${SONIC_API_HOST:localhost}:${SONIC_API_PORT:8094}
+  secret: ${SECRET_KEY:sonic}
+  expireDay: ${EXPIRE_DAY:14}
 
 sonic:
   netty:
-    port: 8095
+    port: ${SONIC_NETTY_PORT:8095}
   jobs:
-    fileCron: 0 0 12 * * ?
-    resultCron: 0 0 12 * * ?
-    dayReportCron: 0 0 10 * * ?
-    weekReportCron: 0 0 10 ? * Mon
-    filesKeepDay: 60
-    resultsKeepDay: 60
+    fileCron: ${FILE_CRON:0 0 12 * * ?}
+    resultCron: ${RESULT_CRON:0 0 12 * * ?}
+    dayReportCron: ${DAY_CRON:0 0 10 * * ?}
+    weekReportCron: ${WEEK_CRON:0 0 10 ? * Mon}
+    filesKeepDay: ${FILE_KEEP_DAY:60}
+    resultsKeepDay: ${RESULT_KEEP_DAY:60}
   ldap:
-    enable: false
-    userId: cn
-    userBaseDN: ou=users
+    enable: ${LDAP_ENABLE:false}
+    userId: ${LDAP_USER_ID:cn}
+    userBaseDN: ${LDAP_BASE_DN:ou=users}
 
 robot:
   client:
-    host: "http://localhost:3000"
+    host: ${CLIENT_HOST:http://localhost:3000}
   img:
     success: "https://gitee.com/sonic-cloud/sonic-cloud/raw/master/src/assets/suc.png"
     warning: "https://gitee.com/sonic-cloud/sonic-cloud/raw/master/src/assets/warn.png"
@@ -88,7 +89,7 @@ knife4j:
   enable: true
   setting:
     enableHost: true
-    enableHostText: "http://localhost:8094"
+    enableHostText: http://${SONIC_API_HOST:localhost}:${SONIC_API_PORT:8094}
     enableFooter: false
     enableFooterCustom: true
     footerCustomContent: MIT License | Copyright 2021 - [SonicCloudOrg/sonic-server](https://github.com/SonicCloudOrg/sonic-server/blob/main/LICENSE)
@@ -100,3 +101,4 @@ logging:
     rollingpolicy:
       clean-history-on-start: true
       max-history: 3
+
